Fix a layout issue.
This had been plaguing me for weeks. There was strange sizing
behaviour with codemirror that prevented me from letting the grid
container size it's items equally on the vertical axis.
Turns out the browser was getting weird ideas about what the minimum
height of the grid container should be, explicitly setting this to 0px
seems to have fixed that.
Now the website scales perfectly.

--- a/www/index.css
+++ b/www/index.css
@@ -56,9 +56,10 @@ a {
 #grid_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 45vh 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-gap: 10px;
     margin-top: 10px;
+    min-height: 0;
 }
 
 #grid_container > * {
